Trying to fix overlapping issue among img

--- a/style.css
+++ b/style.css
@@ -55,28 +55,26 @@ p {
 /* Allow overlap */
 #page1 .image-container {
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: fit-content;
+  height: fit-content;
 }
 
-/* Let images stack naturally with transparency */
-#page1 .image-container img {
-  position: absolute; /* Stack all images */
+#page1 .logo-gif {
+  position: absolute;
   top: 0;
   left: 0;
-}
-
-/* Layer control */
-#page1 .logo-gif {
   z-index: 1;
 }
 
 #page1 .deco-gif-1 {
+  position: relative;
   z-index: 2;
 }
 
 #page1 .deco-gif-2 {
+  position: absolute;
+  top: 0;
+  left: 0;
   z-index: 3;
 }
 
